<resources>
    <string name="app_name">Nano Degree</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_main">My Nanodegree Apps!</string>
    <string name="button_spotify">Spotify Streamer</string>
    <string name="button_scores">Scores App</string>
    <string name="button_library">Library App</string>
    <string name="button_buildBigger">Build It Bigger</string>
    <string name="button_xyzReader">XYZ Reader</string>
    <string name="button_capstone">Capstone: My Own App</string>
</resources>
